--- a/DarkLegacyAPI/appsettings.json
+++ b/DarkLegacyAPI/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=LOCALHOST;Initial Catalog=DB_DarkLegacy;Integrated Security=True"
     }
-  },
-  "AllowedHosts": "*"
+
 }
