--- a/DarkLegacyAPI/appsettings.json
+++ b/DarkLegacyAPI/appsettings.json
@@ -7,7 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=LOCALHOST;Initial Catalog=DB_DarkLegacy;Integrated Security=True"
+        "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DB_DarkLegacy;Integrated Security=True;"
     }
-
 }
